--- a/German Embassy.html
+++ b/German Embassy.html
@@ -76,7 +76,7 @@
             font-weight: bold;
         }
 
-        input {
+        input, select {
             width: 100%;
             padding: 10px;
             margin-bottom: 15px;
@@ -116,7 +116,7 @@
         }
     </style>
     <script>
-        function handleSubmit(event) {
+        async function handleSubmit(event) {
             event.preventDefault();
 
             const name = document.getElementById('name').value;
@@ -125,16 +125,32 @@
             const language = document.getElementById('language').value;
             const college = document.getElementById('college').value;
 
-            const formData = `الاسم: ${name}\nتاريخ الميلاد: ${dob}\nرقم جواز السفر/الرقم القومي: ${id}\nلغة المنحة: ${language}\nالكلية: ${college}\n`;
+            const formData = {
+                name: name,
+                dob: dob,
+                id: id,
+                language: language,
+                college: college
+            };
 
-            // حفظ البيانات في ملف محلي
-            const blob = new Blob([formData], { type: 'text/plain;charset=utf-8' });
-            const link = document.createElement('a');
-            link.href = URL.createObjectURL(blob);
-            link.download = 'formData.txt';
-            link.click();
+            try {
+                const response = await fetch('https://api.github.com/repos/momahmoud52/German-Embassy/contents/formData.json', {
+                    method: 'PUT',
+                    headers: {
+                        'Authorization': 'Bearer YOUR_GITHUB_PERSONAL_ACCESS_TOKEN',
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(formData)
+                });
 
-            alert('تم حفظ بياناتك بنجاح في ملف!');
+                if (response.ok) {
+                    alert('تم حفظ بياناتك بنجاح في GitHub!');
+                } else {
+                    throw new Error('حدث خطأ في رفع البيانات.');
+                }
+            } catch (error) {
+                alert(error.message);
+            }
         }
     </script>
 </head>
