--- a/German Embassy.html
+++ b/German Embassy.html
@@ -85,6 +85,25 @@
             font-size: 1em;
         }
 
+        /* مسؤول عن إعدادات الزر */
+        .continue-btn {
+            background-color: #0055A4;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1.2em;
+            font-weight: bold;
+            margin-top: 15px;
+            text-transform: uppercase;
+            transition: background-color 0.3s ease-in-out;
+        }
+
+        .continue-btn:hover {
+            background-color: #003d7a;
+        }
+
         /* مسؤول عن إعدادات الفوتر */
         footer {
             margin-top: 20px;
@@ -118,39 +137,7 @@
     <script>
         async function handleSubmit(event) {
             event.preventDefault();
-
-            const name = document.getElementById('name').value;
-            const dob = document.getElementById('dob').value;
-            const id = document.getElementById('id').value;
-            const language = document.getElementById('language').value;
-            const college = document.getElementById('college').value;
-
-            const formData = {
-                name: name,
-                dob: dob,
-                id: id,
-                language: language,
-                college: college
-            };
-
-            try {
-                const response = await fetch('https://api.github.com/repos/momahmoud52/German-Embassy/contents/', {
-                    method: 'PUT',
-                    headers: {
-                        'Authorization': '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',
-                        'Content-Type': 'formData.json'
-                    },
-                    body: JSON.stringify(formData)
-                });
-
-                if (response.ok) {
-                    alert('تم حفظ بياناتك بنجاح في GitHub!');
-                } else {
-                    throw new EformData.jsonrror('حدث خطأ في رفع البيانات.');
-                }
-            } catch (error) {
-                alert(error.message);
-            }
+            window.location.href = 'https://forms.office.com/r/GVR0uJv9dA'; // رابط نموذج جوجل فورم
         }
     </script>
 </head>
@@ -166,29 +153,8 @@
         <p>مرحبًا بكم في صفحة منحة السفارة الألمانية. لمزيد من المعلومات، يرجى التواصل مع السفارة مباشرة.</p>
         <p>Willkommen auf der Seite des Stipendiums der Deutschen Botschaft. Für weitere Informationen kontaktieren Sie bitte direkt die Botschaft.</p>
 
-        <!-- نموذج إدخال البيانات -->
-        <form onsubmit="handleSubmit(event)">
-            <label for="name">الاسم الكامل:</label>
-            <input type="text" id="name" name="name" placeholder="اكتب اسمك هنا" required>
-
-            <label for="dob">تاريخ الميلاد:</label>
-            <input type="date" id="dob" name="dob" required>
-
-            <label for="id">رقم جواز السفر أو الرقم القومي:</label>
-            <input type="text" id="id" name="id" placeholder="اكتب الرقم هنا" required>
-
-            <label for="language">لغة المنحة:</label>
-            <select id="language" name="language" required>
-                <option value="ar">العربية</option>
-                <option value="de">الألمانية</option>
-                <option value="en">الإنجليزية</option>
-            </select>
-
-            <label for="college">الكلية:</label>
-            <input type="text" id="college" name="college" placeholder="اكتب الكلية هنا" required>
-
-            <input type="submit" value="إرسال" style="background-color: #0055A4; color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer;">
-        </form>
+        <!-- زر استمرار -->
+        <button class="continue-btn" onclick="handleSubmit(event)">استمرار للتسجيل</button>
     </main>
     <footer>
         <!-- نص حقوق الملكية -->
