--- a/German Embassy.html
+++ b/German Embassy.html
@@ -150,8 +150,8 @@
     </header>
     <main>
         <!-- المحتوى الرئيسي -->
-        <p>مرحبًا بكم في صفحة منحة السفارة الألمانية. لمزيد من المعلومات، يرجى التواصل مع السفارة مباشرة.</p>
-        <p>Willkommen auf der Seite des Stipendiums der Deutschen Botschaft. Für weitere Informationen kontaktieren Sie bitte direkt die Botschaft.</p>
+        <p>مرحبًا بكم في صفحة  السفارة الألمانية. لمزيد من المعلومات، يرجى التواصل مع السفارة مباشرة.</p>
+        <p>Willkommen auf der Seite  der Deutschen Botschaft. Für weitere Informationen kontaktieren Sie bitte direkt die Botschaft.</p>
 
         <!-- زر استمرار -->
         <button class="continue-btn" onclick="handleSubmit(event)">استمرار للتسجيل</button>
