--- a/German Embassy.html
+++ b/German Embassy.html
@@ -7,15 +7,17 @@
     <style>
         /* مسؤول عن الخط */
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap'); /* إضافة خط جديد */
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap'); /* خط إضافي للزر */
 
         /* مسؤول عن إعدادات الجسم والخلفية */
         body {
             font-family: 'Cairo', sans-serif;
             margin: 0;
             padding: 0;
-            background: url('4222193394261016.mp4') no-repeat center center fixed;
+            background: url('https://source.unsplash.com/1920x1080/?abstract,blue') no-repeat center center fixed;
             background-size: cover;
-            color: #333;
+            color: #000000;
             text-align: center;
             overflow-x: hidden;
             animation: fadeIn 2s ease-in-out;
@@ -26,10 +28,22 @@
             to { opacity: 1; }
         }
 
+        /* خلفية الفيديو المتحرك */
+        .background-video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+            opacity: 0.6; /* لتخفيف الفيديو وجعله خلفي فقط */
+        }
+
         /* مسؤول عن إعدادات العنوان */
         header {
-            background-color: rgba(0, 85, 164, 0.8);
-            color: white;
+            background-color: rgba(223, 153, 0, 0.8);
+            color: rgb(208, 0, 0);
             padding: 20px 0;
             animation: slideInDown 1s ease-in-out;
         }
@@ -89,19 +103,21 @@
         .continue-btn {
             background-color: #0055A4;
             color: white;
-            padding: 10px;
+            padding: 15px 25px;
             border: none;
-            border-radius: 5px;
+            border-radius: 20px;
             cursor: pointer;
             font-size: 1.2em;
             font-weight: bold;
             margin-top: 15px;
             text-transform: uppercase;
-            transition: background-color 0.3s ease-in-out;
+            transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
         }
 
         .continue-btn:hover {
             background-color: #003d7a;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+            transform: translateY(-2px); /* رفع للزر عند التمرير عليه */
         }
 
         /* مسؤول عن إعدادات الفوتر */
@@ -142,6 +158,13 @@
     </script>
 </head>
 <body>
+    <!-- فيديو الخلفية -->
+    <video class="background-video" autoplay muted loop>
+        <source src="4222193394261016.mp4" type="video/mp4"> <!-- رابط للفيديو المتحرك -->
+        <source src="4222193394261016.mp4" type="video/webm"> <!-- إضافة صيغة مختلفة لتنسيق الفيديو -->
+        Your browser does not support the video tag.
+    </video>
+    
     <header>
         <!-- لوجو السفارة الألمانية -->
         <img src="OIP-removebg-preview.png" alt="Logo السفارة الألمانية">
@@ -150,8 +173,8 @@
     </header>
     <main>
         <!-- المحتوى الرئيسي -->
-        <p>مرحبًا بكم في صفحة  السفارة الألمانية. لمزيد من المعلومات، يرجى التواصل مع السفارة مباشرة.</p>
-        <p>Willkommen auf der Seite  der Deutschen Botschaft. Für weitere Informationen kontaktieren Sie bitte direkt die Botschaft.</p>
+        <p>مرحبًا بكم في صفحة السفارة الألمانية. لمزيد من المعلومات، يرجى التواصل مع السفارة مباشرة.</p>
+        <p>Willkommen auf der Seite der Deutschen Botschaft. Für weitere Informationen kontaktieren Sie bitte direkt die Botschaft.</p>
 
         <!-- زر استمرار -->
         <button class="continue-btn" onclick="handleSubmit(event)">استمرار للتسجيل</button>
